--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!--================ Margins ===================-->
+    <dimen name="default_padding_margin_s">4dp</dimen>
     <dimen name="default_padding_margin">8dp</dimen>
     <dimen name="default_padding_margin_h">12dp</dimen>
     <dimen name="default_padding_margin_x">16dp</dimen>
@@ -13,8 +14,29 @@
     <dimen name="default_padding_margin_xxxxh">44dp</dimen>
 
     <!--============== Tweet list item =============-->
-    <dimen name="tweet_profile_picture_size">50dp</dimen>
-    <dimen name="username_text_size">18sp</dimen>
-    <dimen name="screen_name_text_size">16sp</dimen>
-    <dimen name="tweet_text_size">16sp</dimen>
+    <dimen name="profile_picture_item_list_size">50dp</dimen>
+    <dimen name="username_item_list_text_size">18sp</dimen>
+    <dimen name="screen_name_item_list_text_size">16sp</dimen>
+    <dimen name="tweet_item_list_text_size">16sp</dimen>
+
+    <!--============== Prodile =============-->
+    <dimen name="profile_picture_size">70dp</dimen>n>
+
+    <!-- Copied from https://github.com/TheKhaeng/material-design-guideline/blob/master/material-design-metric/src/main/res/values/dimens_material.xml -->
+    <!-- ========================== Md default Text size ======================================= -->
+    <!-- https://material.io/design/typography/#type-scale -->
+    <dimen name="md_text_size_headline_1_light">96sp</dimen>
+    <dimen name="md_text_size_headline_2_light">60sp</dimen>
+    <dimen name="md_text_size_headline_3_regular">48sp</dimen>
+    <dimen name="md_text_size_headline_4_regular">34sp</dimen>
+    <dimen name="md_text_size_headline_5_regular">24sp</dimen>
+    <dimen name="md_text_size_headline_6_medium">20sp</dimen>
+
+    <dimen name="md_text_size_subtitle_1_regular">16sp</dimen>
+    <dimen name="md_text_size_subtitle_2_medium">14sp</dimen>
+    <dimen name="md_text_size_body_1_regular">16sp</dimen>
+    <dimen name="md_text_size_body_2_regular">14sp</dimen>
+    <dimen name="md_text_size_button_medium">14sp</dimen>
+    <dimen name="md_text_size_caption_regular">12sp</dimen>
+    <dimen name="md_text_size_overline_regular">10sp</dimen>
 </resources>
