--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
+    <color name="colorPrimary">#0075FF</color>
+    <color name="colorPrimaryDark">#0069E0</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="progress_background">#99000000</color>
     <color name="blue">#498FE3</color>
-
 </resources>
